HeroBox Alignment Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700&display=swap");
 
 body {
-	background: #2c3335;
-	overflow-x: hidden;
+  background: #2c3335;
+  overflow-x: hidden;
 }
 
 .test {
-	width: 100vw;
-	height: 100vh;
-	background: #000;
+  width: 100vw;
+  height: 100vh;
+  background: #000;
 }
