--- a/src/Components/HeroBox/HeroBox.module.scss
+++ b/src/Components/HeroBox/HeroBox.module.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-flow: column;
   justify-content: center;
-  height: 90vh;
+  height: 95vh;
   margin-left: 1rem;
   font-family: "Open Sans", "sans-serif";
   font-weight: bold;
