--- a/src/Components/NavBar/MobileNav/MobileNav.module.scss
+++ b/src/Components/NavBar/MobileNav/MobileNav.module.scss
@@ -12,7 +12,7 @@
 .hamburger {
   height: 32px;
   width: 32px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   svg {
     fill: colors(white);
     height: 100%;
